# ABAP-NotepadPP

./: .gitignore  README.md  build.py  pyproject.toml
ABAP-NotepadPP/: build.py
abap_notepadpp/: repository.py
keywords/: 01_statements.yml  statements.yml
src/abap_notepadpp/: cli.py  config.py  models.py  validator.py  xml_writer.py
templates/: udl.xml.j2
